# XRF-Maps

./: .gitmodules  .travis.yml  CMakeLists.txt  Compile.md  LICENSE  README.md  XRF_Maps.pro  azure-pipelines.yml  compile_commands.json
.github/workflows/: cmake.yml
cmake/: FindNetCDF.cmake
cmake/linux/: FindZeroMQ.cmake
docs/: README.md  custom_optimizer_presets.md
install/: Compile.md  HPC.md
install/linux_64/: update_Xrf_Maps_Linux64.sh
reference/: 9_idb_maps_fit_parameters_override.txt  Scaler_to_PV_map.yaml  henke.xdr  maps_fit_parameters_override.txt  maps_standardinfo.txt  xrf_library.csv
reference/override_parameters/: 8bmb-maps_fit_parameters_override.txt
src/core/: command_line_parser.h  defines.h  main.cpp  mem_info.cpp  mem_info.h  process_streaming.cpp  process_streaming.h  process_whole.cpp  process_whole.h
src/data_struct/: analysis_job.cpp  analysis_job.h  base_dataset.h  detector.cpp  detector.h  element_info.cpp  element_info.h  element_quant.h  fit_element_map.cpp  fit_element_map.h  fit_parameters.cpp  fit_parameters.h  params_override.h  quantification_standard.cpp  quantification_standard.h  scaler_lookup.cpp  scaler_lookup.h  scan_info.h  spectra.cpp  spectra.h  spectra_line.cpp  spectra_line.h  spectra_volume.cpp  spectra_volume.h  stream_block.cpp  stream_block.h
src/data_struct/xrf/: analysis_job.cpp  analysis_job.h  calibration_standard.cpp  calibration_standard.h  detector.cpp  detector.h  element_info.cpp  element_info.h  element_quant.h  fit_element_map.cpp  fit_element_map.h  fit_parameters.cpp  fit_parameters.h  global_init_struct.cpp  global_init_struct.h  params_override.h  quantification_standard.cpp  quantification_standard.h  spectra.cpp  spectra.h  spectra_line.cpp  spectra_line.h  spectra_volume.cpp  spectra_volume.h  stream_block.cpp  stream_block.h
src/fitting/models/: base_model.cpp  base_model.h  gauss_matrix_model.cpp  gauss_matrix_model.h  gauss_tails_model.cpp  gauss_tails_model.h  gaussian_model.cpp  gaussian_model.h  nnls_model.cpp  nnls_model.h  roi_model.cpp  roi_model.h  svd_model.cpp  svd_model.h
src/fitting/optimizers/: lmfit_optimizer.cpp  lmfit_optimizer.h  minpack_optimizer.cpp  minpack_optimizer.h  mpfit_optimizer.cpp  mpfit_optimizer.h  nlopt_optimizer.cpp  nlopt_optimizer.h  optimizer.cpp  optimizer.h
src/fitting/routines/: base_fit_routine.cpp  base_fit_routine.h  hybrid_param_nnls_fit_routine.cpp  hybrid_param_nnls_fit_routine.h  matrix_optimized_fit_routine.cpp  matrix_optimized_fit_routine.h  nnls_fit_routine.cpp  nnls_fit_routine.h  param_optimized_fit_routine.cpp  param_optimized_fit_routine.h  roi_fit_routine.cpp  roi_fit_routine.h  svd_fit_routine.cpp  svd_fit_routine.h
src/io/: hl_file_io.cpp  hl_file_io.h
src/io/file/: base_file_io.h  csv_io.cpp  csv_io.h  file_scan.cpp  file_scan.h  hdf5_io.cpp  hdf5_io.h  hl_file_io.cpp  hl_file_io.h  mca_io.cpp  mca_io.h  mda_io.cpp  mda_io.h  netcdf_io.cpp  netcdf_io.h
src/io/file/aps/: aps_calibration_io.cpp  aps_calibration_io.h  aps_fit_params_import.cpp  aps_fit_params_import.h  aps_roi.cpp  aps_roi.h
src/io/file/esrf/: edf_io.h
src/io/net/: basic_serializer.cpp  basic_serializer.h  zmq_io.cpp  zmq_io.h  zmq_publisher.cpp  zmq_publisher.h  zmq_subscriber.cpp  zmq_subscriber.h
src/pybindings/: main.cpp
src/quantification/models/: quantification_model.cpp  quantification_model.h
src/stats/: correlation_coefficient.h
src/support/cmpfit-1.3a/: mpfit.hpp
src/support/lmfit-6.2/: lmcurve.c  lmcurve.h  lmmin.c  lmmin.h
src/support/lmfit_6.1/: lmcurve.hpp  lmcurve_tyd.hpp  lmmin.hpp  lmstruct.hpp
src/support/mda_utils/: mda-load.h  mda_loader.c  xdr_hack.c  xdr_hack.h
src/support/mdautils-1.4.1/: Changelog.txt  LICENSE  Makefile  README.txt  mda-load.h  mda_ascii.c  mda_dump.c  mda_info.c  mda_loader.c  mda_ls.c  mdatree2ascii  xdr_hack.c  xdr_hack.h
src/support/mdautils-1.4.1/doc/: mda-dump.1  mda-info.1  mda-ls.1  mda2ascii.1  mdatree2ascii.1
src/support/minpack/: minpack.cpp  minpack.hpp
src/support/nnls/: LICENSE  README  denseMatrix.cc  denseMatrix.h  denseMatrix.hpp  makefile  matrix.h  nnls.cc  nnls.h  nnls.hpp  nnlsDriver.cc  sparseMatrix.cc  sparseMatrix.h  sparseMatrix.hpp  vector.h  vector.hpp
src/visual/: grapher.cpp  grapher.h  vtk_graph.cpp  vtk_graph.h
src/workflow/: distributor.cpp  distributor.h  pipeline.cpp  pipeline.h  producer.cpp  producer.h  sink.cpp  sink.h  source.h  threadpool.h
src/workflow/xrf/: detector_sum_spectra_source.cpp  detector_sum_spectra_source.h  integrated_spectra_source.cpp  integrated_spectra_source.h  integrated_spectra_stream_producer.cpp  integrated_spectra_stream_producer.h  spectra_file_source.cpp  spectra_file_source.h  spectra_net_source.cpp  spectra_net_source.h  spectra_net_streamer.cpp  spectra_net_streamer.h  spectra_stream_producer.cpp  spectra_stream_producer.h  spectra_stream_saver.cpp  spectra_stream_saver.h  sum_detectors_spectra_stream_producer.cpp  sum_detectors_spectra_stream_producer.h
test/: Test_2_ID_E.py  config.json  pva_xrf.py  test_fit.py
test/2_ID_E_dataset/: maps_fit_parameters_override.txt  maps_standardinfo.txt
test/2_ID_E_dataset/flyXRF.h5/: 2xfm_0011_2xfm3__0.h5
test/2_ID_E_dataset/mda/: 2xfm_0010.mda  2xfm_0011.mda  axo_std.mda
test/unit/: test_hdf5_io.cpp  test_hl_file_io.cpp  test_netcdf_io.cpp  test_spectra.cpp
tools/: export_to_athena.py
